# snowglobe

./: .gitignore  LEGAL.md  LICENSE  README.md  REVIEW.md  SPEC.md  TODO.md  config.yml  config.yml.example  pyproject.toml
.github/workflows/: publish.yml
assets/: banner.txt
snowglobe/: __init__.py  __main__.py
snowglobe/cli/: access.py  app.py  context.py  cost.py  debug.py  diff.py  optimizer.py  prompts.py  registry.py  report.py  router.py  shell.py  shell_completer.py
snowglobe/cli/commands/: __init__.py  access.py  set.py  use.py
snowglobe/collectors/: access.py  query_history.py  query_profile.py
snowglobe/config/: loader.py
snowglobe/core/: access_service.py  cost_service.py  optimizer.py  query_service.py  report_service.py  risk_service.py
snowglobe/engines/access/: explainer.py  resolver.py
snowglobe/engines/ai/: cortex_optimizer.py
snowglobe/engines/optimizer/: query_optimizer.py
snowglobe/graphs/: role_graph.py  user_graph.py
snowglobe/models/: access.py  access_path.py  grant.py  object_ref.py  object_type.py  optimizer.py  privilege.py  query.py
snowglobe/output/: cli.py
snowglobe/queries/: query_history.py
snowglobe/snowflake/: connection.py
snowglobe/state/: db.py  state.py
snowglobe/templates/: report.md.j2
snowglobe/tests/: access_tests.py
snowglobe/tui/: __init__.py  __main__.py  app.py  styles.tcss
snowglobe/tui/screens/: access.py  cost.py  home.py  refresh.py  reports.py  risk.py  (+1 more)
tests/: test_access.py  test_optimizer_engine.py  test_output.py  test_query_validation.py  test_state_db.py  test_tui_tune.py
(+4 files in other folders)
